UI-Grid column size fix.
Although I created a method to dynamically resize the grid, the horixzontal scrollbar would not move from the original position. Several attempts were made to get this to work. Ill put this down a s a bug in the UI GRID sw. I stepped back from this, back to a grib of 10 rows where the grid is fixed in size, and hence the scrollbar is where it should be.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -161,7 +161,7 @@ body {
 input.qtyplus { width:25px; height:25px;}
 input.qtyminus { width:25px; height:25px;}
 body{
-  background:url('http://www.wallpaperup.com/uploads/wallpapers/2012/10/21/20181/cad2441dd3252cf53f12154412286ba0.jpg');
+  /*background:url('http://www.wallpaperup.com/uploads/wallpapers/2012/10/21/20181/cad2441dd3252cf53f12154412286ba0.jpg');*/
   /*padding:50px;*/
 }
 #login-dp{
@@ -217,9 +217,46 @@ body{
 }
 .influxGrid {
   width: 800px;
-  height: 800px;
+  height: 420px;
 }
 .shopTrawler {
-  width: 800px;
-  height: 800px;
+  width: 1000px;
+  height: 420px;
 }
+.shopTrawler1 {
+  width: 1000px;
+  height: 150px;
+}
+.shopTrawler2 {
+  width: 1000px;
+  height: 180px;
+}
+.shopTrawler3 {
+  width: 1000px;
+  height: 210px;
+}
+.shopTrawler4 {
+  width: 1000px;
+  height: 240px;
+}
+.shopTrawler5 {
+  width: 1000px;
+  height: 270px;
+}
+.shopTrawler6 {
+  width: 1000px;
+  height: 300px;
+}
+.shopTrawler7 {
+  width: 1000px;
+  height: 330px;
+}
+.shopTrawler8 {
+  width: 1000px;
+  height: 360px;
+}
+.shopTrawler9 {
+  width: 1000px;
+  height: 390px;
+}
+
